--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.domybest.mybox": "file:C:/Users/Tufan/OneDrive/Desktop/S4G/MyBox-master",
+    "com.domybest.mybox": "https://github.com/Deadcows/MyBox.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.cinemachine": "3.1.4",
